# Dictation

./: .gitignore  LICENSE  README.ja.md  README.md
.github/workflows/: README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MODEL_COMPARISON.md  PHASE0_POC.md  ROADMAP.md  SECURITY.md
models/: README.md
research/phase0/: README.md  aggregate.py  bench_asr.py  bench_llm.py  models.py  quality_judge.py  requirements.txt  runtime_selector.py
research/phase0/inputs/: en_business_01.txt  en_business_02.txt  en_business_03.txt  en_business_04.txt  en_business_05.txt  ja_keigo_01.txt  ja_keigo_02.txt  ja_keigo_03.txt  ja_keigo_04.txt  ja_keigo_05.txt  jp_en_mix_01.txt  jp_en_mix_02.txt  jp_en_mix_03.txt  jp_en_mix_04.txt  jp_en_mix_05.txt  summary_long_01.txt  summary_long_02.txt  summary_long_03.txt
research/phase0/results/: hf_existence.json  report.md
research/phase0/rust_ort_spike/: .gitignore  Cargo.toml  README.md
research/phase0/rust_ort_spike/src/: main.rs
scripts/: README.md
sidecars/: README.md
